	 menu.c (GTK+ changes).
20040415 widget/{menu.c,widget.h}: generalise more functions into menu.c
	 (widget changes).
20040415 menu.[ch]: add copyright and GPL notice.
20040416 menu.[ch],ui/gtk/gtkui.c,widget/menu.c: generalise
	 menu_media_disk_insert().
20040416 keyboard.[ch],ui/gtk/gtkjoystick.c: add kludgey UI to allow
	 the joystick fire button actions to be changed.
20040419 Major memory mapping revamp (patch #932893).
20040419 printer.c: stop output to the serial printer when printer
	 emulation is disabled.
20040420 utils.c: cartridges would be lost on reset if opened with
	 File/Open (or from the command line) rather than with
	 Media/Cartridge/Insert.
20040420 dck.c,machine.c,memory.[ch],scld.[ch],utils.c,
	 machines/{spec16.c,tc2068.c}: simplify memory handling by
	 allocating all memory from a pool and then just throwing the pool
	 away on reset.
20040420 dck.c: when inserting a cartridge, change the setting only after
	 we have verified that the file loads successfully.
20040423 tape.c: further improvements to the register values after the
	 tape loading trap (patch #939572) (Darren).
20040423 machines/tc2068.c: if we couldn't load a dock file on reset
	 (its contents may have changed behind our back), just ignore it,
	 rather than cause the reset to fail (which causes Fuse to abort).
20040428 z80/z80.pl,z80/tests/{34,35,cb?[6e],ed67,ed6f}.out: improved
	 contended memory timings for INC/DEC (HL), <shift/rotate> (HL),
	 BIT/SET/RES b,(HL), RLD and RRD (thanks, Mark Woodmass and
	 Jonathan Needle).
20040428 z80/z80.pl,z80/tests/[df]d{3[456],[45689ab][6e],7[0123457e],cb??}.out:
	 improved contended memory timings for (IX+nn) and (IY+nn)
	 instructions (thanks, Mark Woodmass and Jonathan Needle).
20040430 z80/z80.pl,z80/tests/{dde3.out,e3.out,fde3.out}; improved
	 contended memory timings for EX (SP),HL, EX (SP),IX and EX
	 (SP),IY (thanks, Mark Woodmass and Jonathan Needle).
20040505 z80.c: fix times for interrupt acknowledgement.